posible overflow x fix2

--- a/MyApp/src/App.css
+++ b/MyApp/src/App.css
@@ -14,8 +14,6 @@ html,body
     height: 100%;
     margin: 0px;
     padding: 0px;
-    -webkit-transform:translateZ(0);
-     transform:translateZ(0);
 }
 
 html {
@@ -27,8 +25,6 @@ body {
   font-weight: 400;
   position: relative;
   font-family: 'Open Sans', sans-serif;
-  overflow-x: hidden;
-
 }
 
 h1,
@@ -205,6 +201,10 @@ h6 {
 
 
 @media (max-width:600px) {
+
+  html,body {
+    overflow-x: hidden;
+  }
 
   .aboutSection {
     background-position: 0px 100px;
